js/js.translator/testData/incremental/invalidation/moveFilesBetweenModules/lib3/l3.kt
inline fun dex(x: Int, y: Int) = qux(x * y, y - x)
